# rust-on-lambda

./: Cargo.toml  Dockerfile  Dockerfile.upx  README.md
.github/workflows/: deploy.yml
src/: main.rs
